Started implementation of HDF5 tools

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
 
 find_package(XSD REQUIRED)
 find_package(XercesC REQUIRED)
+find_package(Boost REQUIRED)
+find_package(HDF5 1.8 COMPONENTS C CXX HL REQUIRED)
 
 #Process the XSD files
 SET(XSDS schema/ismrmrd.xsd)
@@ -12,10 +14,15 @@ SET(XSD_ARGS cxx-tree --generate-serialization)
 
 WRAP_XSD(XSDS_SOURCES XSD_INCLUDES ${CMAKE_CURRENT_BINARY_DIR}/schema ${XSDS} OPTIONS ${XSD_ARGS})
 
-INCLUDE_DIRECTORIES(${XSD_INCLUDES})
-add_executable(ismrmrd main.cpp ${XSDS_SOURCES})
-target_link_libraries(ismrmrd ${XERCESC_LIBRARIES})
+INCLUDE_DIRECTORIES(${XSD_INCLUDES} ${XERCESC_INCLUDE_DIR} ${Boost_INCLUDE_DIR} ${HDF5_INCLUDES})
+add_executable(ismrmrd_test main.cpp ${XSDS_SOURCES})
+target_link_libraries(ismrmrd_test ${XERCESC_LIBRARIES})
 
-INSTALL(FILES ismrmrd.h DESTINATION include)
+add_library(ismrmrd SHARED ismrmrd_hdf5.cpp)
+target_link_libraries(ismrmrd ${HDF5_LIBRARIES})
+
+INSTALL(FILES ismrmrd.h ismrmrd_hdf5.h ismrmrd_hdf5_datatypes.h ismrmrd_export.h DESTINATION include)
 INSTALL(FILES schema/ismrmrd.xsd DESTINATION schema)
 INSTALL(FILES cmake/FindIsmrmrd.cmake DESTINATION cmake)
+INSTALL(TARGETS ismrmrd DESTINATION lib)
+INSTALL(TARGETS ismrmrd_test DESTINATION bin)
