Started work on test applications

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,10 +52,20 @@ ENDIF(WIN32)
 add_executable(ismrmrd_test main.cpp)
 target_link_libraries(ismrmrd_test ${XERCESC_LIBRARIES} ismrmrd)
 
+find_package(FFTW3 COMPONENTS single)
+IF(FFTW3_FOUND)
+	MESSAGE("FFTW3 Found, building test applications")
+	add_executable(ismrmrd_create_dataset test_create_dataset.cpp)
+	target_link_libraries(ismrmrd_create_dataset ${XERCESC_LIBRARIES} ismrmrd)
+ELSE(FFTW3_FOUND)
+	MESSAGE("FFTW3 NOT Found....cannot build test applications")
+ENDIF(FFTW3_FOUND)
+
 INSTALL(FILES ismrmrd.h ${XSDS_SOURCES} ismrmrd_hdf5.h ismrmrd_hdf5_datatypes.h ismrmrd_export.h DESTINATION include)
 INSTALL(FILES schema/ismrmrd.xsd DESTINATION schema)
 INSTALL(FILES cmake/FindIsmrmrd.cmake DESTINATION cmake)
 INSTALL(TARGETS ismrmrd DESTINATION lib)
 INSTALL(TARGETS ismrmrd_test DESTINATION bin)
+INSTALL(TARGETS ismrmrd_create_dataset DESTINATION bin)
 
 add_subdirectory(doc)
