--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,9 +55,10 @@ target_link_libraries(ismrmrd_test ${XERCESC_LIBRARIES} ismrmrd)
 find_package(FFTW3 COMPONENTS single)
 IF(FFTW3_FOUND)
 	MESSAGE("FFTW3 Found, building test applications")
-	INCLUDE_DIRECTORIES(${FFTW3_INDCLUDE_DIR})
+	INCLUDE_DIRECTORIES(${FFTW3_INCLUDE_DIR})
 	add_executable(ismrmrd_create_dataset test_create_dataset.cpp)
 	target_link_libraries(ismrmrd_create_dataset ${XERCESC_LIBRARIES} ismrmrd ${FFTW3_LIBRARIES})
+	INSTALL(TARGETS ismrmrd_create_dataset DESTINATION bin)
 ELSE(FFTW3_FOUND)
 	MESSAGE("FFTW3 NOT Found....cannot build test applications")
 ENDIF(FFTW3_FOUND)
@@ -67,6 +68,5 @@ INSTALL(FILES schema/ismrmrd.xsd DESTINATION schema)
 INSTALL(FILES cmake/FindIsmrmrd.cmake DESTINATION cmake)
 INSTALL(TARGETS ismrmrd DESTINATION lib)
 INSTALL(TARGETS ismrmrd_test DESTINATION bin)
-INSTALL(TARGETS ismrmrd_create_dataset DESTINATION bin)
 
 add_subdirectory(doc)
