--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,9 @@ IF(FFTW3_FOUND)
 	add_executable(ismrmrd_create_dataset test_create_dataset.cpp)
 	target_link_libraries(ismrmrd_create_dataset ${XERCESC_LIBRARIES} ismrmrd ${FFTW3_LIBRARIES})
 	INSTALL(TARGETS ismrmrd_create_dataset DESTINATION bin)
+	add_executable(ismrmrd_recon_dataset test_recon_dataset.cpp)
+	target_link_libraries(ismrmrd_recon_dataset ${XERCESC_LIBRARIES} ismrmrd ${FFTW3_LIBRARIES})
+	INSTALL(TARGETS ismrmrd_recon_dataset DESTINATION bin)
 ELSE(FFTW3_FOUND)
 	MESSAGE("FFTW3 NOT Found....cannot build test applications")
 ENDIF(FFTW3_FOUND)
