--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,11 +22,13 @@ find_package(HDF5 1.8 COMPONENTS C CXX REQUIRED)
 
 #Process the XSD files
 SET(XSDS schema/ismrmrd.xsd)
-SET(XSD_ARGS cxx-tree --generate-serialization --export-symbol EXPORTISMRMRD --hxx-prologue-file ${CMAKE_SOURCE_DIR}/ismrmrd_export.h)
+SET(XSD_ARGS cxx-tree --generate-serialization --export-symbol EXPORTISMRMRDXSD --hxx-prologue-file ${CMAKE_SOURCE_DIR}/ismrmrd_xsd_export.h)
 WRAP_XSD(XSDS_SOURCES XSD_INCLUDES ${CMAKE_CURRENT_BINARY_DIR}/schema ${XSDS} OPTIONS ${XSD_ARGS})
 INCLUDE_DIRECTORIES(${XSD_INCLUDES} ${XSD_INCLUDE_DIR} ${XERCESC_INCLUDE_DIR} ${Boost_INCLUDE_DIR} ${HDF5_INCLUDE_DIR} ${HDF5_INCLUDE_DIR}/cpp)
 LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
-add_library(ismrmrd SHARED ismrmrd_hdf5.cpp ${XSDS_SOURCES})
+
+add_library(ismrmrd SHARED ismrmrd_hdf5.cpp)
+add_library(ismrmrd_xsd SHARED ${XSDS_SOURCES})
 
 #The findHDF5.cmake does not work very well on Windows, let's help it out
 IF(WIN32)
@@ -44,20 +46,22 @@ IF(WIN32)
 	target_link_libraries(ismrmrd debug ${HDF5_LIB_DIR}/zlib_D.lib)
 	target_link_libraries(ismrmrd debug ${HDF5_LIB_DIR}/szip_D.lib)
 
-	target_link_libraries(ismrmrd ${XERCESC_LIBRARIES} ${Boost_LIBRARIES})
+	target_link_libraries(ismrmrd ${Boost_LIBRARIES})
 ELSE (WIN32)
-	target_link_libraries(ismrmrd ${HDF5_LIBRARIES} ${XERCESC_LIBRARIES} ${Boost_LIBRARIES})
+	target_link_libraries(ismrmrd ${HDF5_LIBRARIES} ${Boost_LIBRARIES})
 ENDIF(WIN32)
+
+target_link_libraries(ismrmrd_xsd ${XERCESC_LIBRARIES})
 
 find_package(FFTW3 COMPONENTS single)
 IF(FFTW3_FOUND)
 	MESSAGE("FFTW3 Found, building test applications")
 	INCLUDE_DIRECTORIES(${FFTW3_INCLUDE_DIR})
 	add_executable(ismrmrd_create_dataset test_create_dataset.cpp)
-	target_link_libraries(ismrmrd_create_dataset ${XERCESC_LIBRARIES} ismrmrd ${FFTW3_LIBRARIES})
+	target_link_libraries(ismrmrd_create_dataset ${XERCESC_LIBRARIES} ismrmrd ismrmrd_xsd ${FFTW3_LIBRARIES})
 	INSTALL(TARGETS ismrmrd_create_dataset DESTINATION bin)
 	add_executable(ismrmrd_recon_dataset test_recon_dataset.cpp)
-	target_link_libraries(ismrmrd_recon_dataset ${XERCESC_LIBRARIES} ismrmrd ${FFTW3_LIBRARIES})
+	target_link_libraries(ismrmrd_recon_dataset ${XERCESC_LIBRARIES} ismrmrd ismrmrd_xsd ${FFTW3_LIBRARIES})
 	INSTALL(TARGETS ismrmrd_recon_dataset DESTINATION bin)
 ELSE(FFTW3_FOUND)
 	MESSAGE("FFTW3 NOT Found....cannot build test applications")
@@ -67,5 +71,6 @@ INSTALL(FILES ismrmrd.h ${XSDS_SOURCES} ismrmrd_hdf5.h ismrmrd_hdf5_datatypes.h 
 INSTALL(FILES schema/ismrmrd.xsd DESTINATION schema)
 INSTALL(FILES cmake/FindIsmrmrd.cmake DESTINATION cmake)
 INSTALL(TARGETS ismrmrd DESTINATION lib)
+INSTALL(TARGETS ismrmrd_xsd DESTINATION lib)
 
 add_subdirectory(doc)
