--- a/examples/c++/CMakeLists.txt
+++ b/examples/c++/CMakeLists.txt
@@ -8,6 +8,9 @@ IF(FFTW3_FOUND)
        add_executable(ismrmrd_recon_dataset test_recon_dataset.cpp)
        target_link_libraries(ismrmrd_recon_dataset ${XERCESC_LIBRARIES} ismrmrd ismrmrd_xsd ${FFTW3_LIBRARIES})
        INSTALL(TARGETS ismrmrd_recon_dataset DESTINATION bin)
+       add_executable(read_timing_test read_timing_test.cpp)
+       target_link_libraries(read_timing_test ${XERCESC_LIBRARIES} ismrmrd ismrmrd_xsd ${FFTW3_LIBRARIES})
+       INSTALL(TARGETS read_timing_test DESTINATION bin)
 ELSE(FFTW3_FOUND)
        MESSAGE("FFTW3 NOT Found....cannot build test applications")
 ENDIF(FFTW3_FOUND)
