fixed ismrmrd.h to compile with a C compiler.
also added a skeleton test for testing the usage of
both ISMRMRD header structs in code that is explicitly C,
as well as simple tests for quaternion to direction vectors
(and vice versa) functions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,4 +68,4 @@ INSTALL(FILES ${MatlabMFiles} DESTINATION matlab/+ismrmrd)
 
 add_subdirectory(doc)
 add_subdirectory(examples/c++)
-add_subdirectory(tests/c++)
+add_subdirectory(tests)
