added initial version of SWIG Python bindings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,7 @@ INSTALL(TARGETS ismrmrd DESTINATION lib)
 INSTALL(TARGETS ismrmrd_xsd DESTINATION lib)
 INSTALL(FILES ${MatlabMFiles} DESTINATION matlab/+ismrmrd)
 
+add_subdirectory(bindings)
 add_subdirectory(doc)
 add_subdirectory(examples/c++)
 add_subdirectory(tests)
