more work on Python and Java bindings

--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -1,2 +1,3 @@
+set(ISMRMRD_SWIG_INTERFACE_FILE ${CMAKE_CURRENT_SOURCE_DIR}/ismrmrd.i)
 add_subdirectory(python)
-#add_subdirectory(java)
+add_subdirectory(java)
