Added first parts of utility functions for generating shepp-logan phantom datasets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,3 +69,5 @@ INSTALL(FILES ${MatlabMFiles} DESTINATION matlab/+ismrmrd)
 add_subdirectory(doc)
 add_subdirectory(examples/c++)
 add_subdirectory(tests)
+add_subdirectory(utilities)
+
