added custom command to make jar for java bindings

--- a/bindings/java/CMakeLists.txt
+++ b/bindings/java/CMakeLists.txt
@@ -11,3 +11,12 @@ set_source_files_properties(ismrmrd_java.i PROPERTIES CPLUSPLUS ON)
 
 SWIG_ADD_MODULE(jismrmrd java ismrmrd_java.i ../../ismrmrd_hdf5.cpp)
 SWIG_LINK_LIBRARIES(jismrmrd ${HDF5_LIBRARIES} ${Boost_LIBRARIES} ${JAVA_LIBRARIES})
+
+set_source_files_properties(ismrmrd.jar PROPERTIES GENERATED true)
+add_custom_command(
+    TARGET jismrmrd
+    POST_BUILD
+    COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/make_jar.sh
+    COMMENT "Generating java class files and ismrmrd.jar" VERBATIM
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+)
