using FindJNI for Java bindings.
No longer need to specify JAVA_INCLUDE_DIR for cmake, as FindJNI
defines JAVA_INCLUDE_PATH.

--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -11,10 +11,12 @@ if(SWIG_FOUND)
         message("PythonLibs not found. Not building Python bindings")
     endif(PYTHONLIBS_FOUND)
 
-    if(DEFINED JAVA_INCLUDE_DIR)
+    find_package(JNI)
+    if(JNI_FOUND)
+        message(STATUS "JAVA Include Path: ${JAVA_INCLUDE_PATH}")
         add_subdirectory(java)
     else()
-        message("JAVA_INCLUDE_DIR not defined. Not building Java bindings")
+        message("JNI not found. Not building Java bindings")
     endif()
 
 endif(SWIG_FOUND)
