--- a/bindings/java/make_jar.sh.in
+++ b/bindings/java/make_jar.sh.in
@@ -3,7 +3,7 @@ javac org/ismrm/ismrmrd/*.java
 
 ## The XML Header classes
 # Make a class out of the schema
-xjc -p org.ismrm.ismrmrd.xmlhdr -b ../../../bindings/java/cfg.jxb ../../../schema/ismrmrd.xsd
+xjc -p org.ismrm.ismrmrd.xmlhdr -b @CMAKE_SOURCE_DIR@/bindings/java/cfg.jxb @CMAKE_SOURCE_DIR@/schema/ismrmrd.xsd
 javac org/ismrm/ismrmrd/xmlhdr/*.java
 
 # Build a big jar
