adding FindNumPy.cmake for Python bindings.
As of now, the Python bindings will only be build if
Numpy > 1.7.0 is found by FindNumPy.cmake.

--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -6,7 +6,16 @@ if(SWIG_FOUND)
 
     find_package(PythonLibs)
     if(PYTHONLIBS_FOUND)
-        add_subdirectory(python)
+        find_package(NumPy)
+        if(NUMPY_FOUND)
+            if (NUMPY_VERSION VERSION_LESS "1.7")
+                message("NumPy version < 1.7. Not building Python bindings")
+            else (${NUMPY_VERSION} VERSION_LESS "1.7")
+                add_subdirectory(python)
+            endif (NUMPY_VERSION VERSION_LESS "1.7")
+        else(NUMPY_FOUND)
+            message("NumPy not found. Not building Python bindings")
+        endif(NUMPY_FOUND)
     else(PYTHONLIBS_FOUND)
         message("PythonLibs not found. Not building Python bindings")
     endif(PYTHONLIBS_FOUND)
