Slowly migrating back to a (faster) matlab class.

--- a/matlab/CMakeLists.txt
+++ b/matlab/CMakeLists.txt
@@ -69,4 +69,4 @@ else (NOT JAVA_FOUND)
 endif(NOT JAVA_FOUND)
 
 INSTALL(DIRECTORY +ismrmrd DESTINATION matlab)
-INSTALL(FILES ${ISMRMRD_JAR} DESTINATION matlab/+ismrmrd)
+INSTALL(FILES ${ISMRMRD_JAR} DESTINATION matlab/+ismrmrd/+util)
