--- a/bindings/java/make_jar.sh.in
+++ b/bindings/java/make_jar.sh.in
@@ -9,5 +9,5 @@ javac org/ismrm/ismrmrd/xmlhdr/*.java
 # Build a big jar
 jar -cvf ismrmrd.jar org/ismrm/ismrmrd/*.class org/ismrm/ismrmrd/xmlhdr/*.class
 
-# Build the java docs
-javadoc -quiet -d ismrmrd.javadoc -subpackages org.ismrm.ismrmrd
+# Build the java docs only for the XML header API
+javadoc -quiet -d doc -subpackages org.ismrm.ismrmrd.xmlhdr
