fix #8: cmake now autodetects java include

--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -11,10 +11,11 @@ if(SWIG_FOUND)
         message("PythonLibs not found. Not building Python bindings")
     endif(PYTHONLIBS_FOUND)
 
-    if(DEFINED JAVA_INCLUDE_DIR)
+    find_package(JNI)
+    if(JNI_FOUND)
         add_subdirectory(java)
-    else()
-        message("JAVA_INCLUDE_DIR not defined. Not building Java bindings")
-    endif()
+    else(JNI_FOUND)
+        message("Java Native Interface not found. Not building Java bindings")
+    endif(JNI_FOUND)
 
 endif(SWIG_FOUND)
