Revert "restore compatibility with numpy 1.6"
This reverts commit 6e07c3ad5ef4f972f16b20999d931b60e05dfd53.

--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -8,7 +8,11 @@ if(SWIG_FOUND)
     if(PYTHONLIBS_FOUND)
         find_package(NumPy)
         if(NUMPY_FOUND)
-            add_subdirectory(python)
+            if (NUMPY_VERSION VERSION_LESS "1.7")
+                message("NumPy version < 1.7. Not building Python bindings")
+            else (${NUMPY_VERSION} VERSION_LESS "1.7")
+                add_subdirectory(python)
+            endif (NUMPY_VERSION VERSION_LESS "1.7")
         else(NUMPY_FOUND)
             message("NumPy not found. Not building Python bindings")
         endif(NUMPY_FOUND)
